add: right column and ended exercise

--- a/index.html
+++ b/index.html
@@ -52,10 +52,22 @@
                     </li>
                     <li class="m-2 d-none d-lg-inline-block"><a href=""><i
                                 class="fa-solid fa-ellipsis-vertical"></i></a></li>
-                    <li class=" text-warning d-lg m-2"><a href=""><i class="fa-solid fa-bell"></i></a></li>
-
+                    <li class="m-2">
+                        <div class="nav-item dropstart">
+                            <div class="nav-link" href="#" role="button" data-bs-toggle="dropdown"
+                                aria-expanded="false">
+                                <i class="fa-solid fa-bell text-warning"></i>
+                            </div>
+                            <ul class="dropdown-menu mt-4">
+                                <li><a class="dropdown-item" href="#">Profilo</a></li>
+                                <li><a class="dropdown-item" href="#">Fatturazione</a></li>
+                                <li><a class="dropdown-item" href="#">Logout</a></li>
+                            </ul>
+                        </div>
+                    </li>
                 </ul>
             </div>
+
         </header>
 
         <!-- /header -->
@@ -113,7 +125,7 @@
             <!-- /Side-bar -->
 
             <!-- content -->
-            <div class="ms_content">
+            <div class="ms_content ">
 
                 <!-- Jumbotron -->
 
@@ -590,11 +602,12 @@
                                             <tr>
                                                 <td class="ms_table">
                                                     <div class="ms_table-img">
-                                                        <img class="rounded-circle ml-1" src="img/class-avatar.jpg" alt="">
+                                                        <img class="rounded-circle ml-1" src="img/class-avatar.jpg"
+                                                            alt="">
                                                     </div>
                                                     <p class="m-0">classe 99</p>
                                                 </td>
-                                                <td class="text-center d-none d-lg-table-cell">16 Feb 2022</td>
+                                                <td class="text-center d-none d-lg-table-cell">16 febbraio 2024</td>
                                                 <td class="text-center d-none d-md-table-cell">20%</td>
                                                 <td class="text-center">
                                                     <span class="badge text-bg-success">Done</span>
@@ -612,7 +625,8 @@
 
                                                 <td class="ms_table">
                                                     <div class="ms_table-img">
-                                                        <img class="rounded-circle ml-1" src="img/class-avatar.jpg" alt="">
+                                                        <img class="rounded-circle ml-1" src="img/class-avatar.jpg"
+                                                            alt="">
                                                     </div>
                                                     <p class="m-0">classe 109</p>
                                                 </td>
@@ -631,15 +645,16 @@
                                                 </td>
                                             </tr>
                                             <tr>
-                                                
+
 
                                                 <td class="ms_table">
                                                     <div class="ms_table-img">
-                                                        <img class="rounded-circle ml-1" src="img/class-avatar.jpg" alt="">
+                                                        <img class="rounded-circle ml-1" src="img/class-avatar.jpg"
+                                                            alt="">
                                                     </div>
                                                     <p class="m-0">classe 105</p>
                                                 </td>
-                                                <td class="text-center d-none d-lg-table-cell">12 agosto 2023</td>
+                                                <td class="text-center d-none d-lg-table-cell">12 agosto 2024</td>
                                                 <td class="text-center d-none d-md-table-cell">80%</td>
                                                 <td class="text-center">
                                                     <span class="badge text-bg-success">Done</span>
@@ -656,11 +671,12 @@
                                             <tr>
                                                 <td class="ms_table">
                                                     <div class="ms_table-img">
-                                                        <img class="rounded-circle ml-1" src="img/class-avatar.jpg" alt="">
+                                                        <img class="rounded-circle ml-1" src="img/class-avatar.jpg"
+                                                            alt="">
                                                     </div>
                                                     <p class="m-0">classe 104</p>
                                                 </td>
-                                                <td class="text-center d-none d-lg-table-cell">12 ottobre 2022</td>
+                                                <td class="text-center d-none d-lg-table-cell">12 ottobre 2024</td>
                                                 <td class="text-center d-none d-md-table-cell">90%</td>
                                                 <td class="text-center">
                                                     <span class="badge text-bg-success">Done</span>
@@ -679,11 +695,12 @@
                                             <tr>
                                                 <td class="ms_table">
                                                     <div class="ms_table-img">
-                                                        <img class="rounded-circle ml-1" src="img/class-avatar.jpg" alt="">
+                                                        <img class="rounded-circle ml-1" src="img/class-avatar.jpg"
+                                                            alt="">
                                                     </div>
                                                     <p class="m-0">classe 107</p>
                                                 </td>
-                                                <td class="text-center d-none d-lg-table-cell">12 ottobre 2024</td>
+                                                <td class="text-center d-none d-lg-table-cell">12 ottobre 2025</td>
                                                 <td class="text-center d-none d-md-table-cell">20%</td>
                                                 <td class="text-center">
                                                     <span class="badge text-bg-danger">Failed</span>
@@ -700,11 +717,12 @@
                                             <tr>
                                                 <td class="ms_table">
                                                     <div class="ms_table-img">
-                                                        <img class="rounded-circle ml-1" src="img/class-avatar.jpg" alt="">
+                                                        <img class="rounded-circle ml-1" src="img/class-avatar.jpg"
+                                                            alt="">
                                                     </div>
                                                     <p class="m-0">classe 95</p>
                                                 </td>
-                                                <td class="text-center d-none d-lg-table-cell">20 Feb 2023</td>
+                                                <td class="text-center d-none d-lg-table-cell">20 marzo 2024</td>
                                                 <td class="text-center d-none d-md-table-cell">100%</td>
                                                 <td class="text-center">
                                                     <span class="badge text-bg-success">Done</span>
@@ -722,11 +740,12 @@
                                             <tr>
                                                 <td class="ms_table">
                                                     <div class="ms_table-img">
-                                                        <img class="rounded-circle ml-1" src="img/class-avatar.jpg" alt="">
+                                                        <img class="rounded-circle ml-1" src="img/class-avatar.jpg"
+                                                            alt="">
                                                     </div>
                                                     <p class="m-0">classe 100</p>
                                                 </td>
-                                                <td class="text-center d-none d-lg-table-cell">12 ottobre 2023</td>
+                                                <td class="text-center d-none d-lg-table-cell">12 ottobre 2025</td>
 
 
                                                 <td class="text-center d-none d-md-table-cell">20%</td>
@@ -745,11 +764,12 @@
                                             <tr>
                                                 <td class="ms_table">
                                                     <div class="ms_table-img">
-                                                        <img class="rounded-circle ml-1" src="img/class-avatar.jpg" alt="">
+                                                        <img class="rounded-circle ml-1" src="img/class-avatar.jpg"
+                                                            alt="">
                                                     </div>
                                                     <p class="m-0">classe 94</p>
                                                 </td>
-                                                <td class="text-center d-none d-lg-table-cell">22 dicembre 2022</td>
+                                                <td class="text-center d-none d-lg-table-cell">22 dicembre 2023</td>
                                                 <td class="text-center d-none d-md-table-cell">78%</td>
                                                 <td class="text-center">
                                                     <span class="badge text-bg-success">Done</span>
@@ -769,14 +789,156 @@
                                 </div>
                             </div>
                             <!-- /STUDENT CARD -->
+
+                            <!-- Faq section -->
+
+                            <div class="card mb-3">
+                                <h5 class="card-header">
+                                    F.A.Q.
+                                </h5>
+                                <div class="accordion" id="accordionExample">
+                                    <div class="accordion-item">
+                                        <h2 class="accordion-header" id="headingOne">
+                                            <button class="accordion-button collapsed" type="button"
+                                                data-bs-toggle="collapse" data-bs-target="#collapseOne"
+                                                aria-expanded="false" aria-controls="collapseOne">
+                                                Come aggiungere un nuovo studente?
+                                            </button>
+                                        </h2>
+                                        <div id="collapseOne" class="accordion-collapse collapse"
+                                            aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                                            <div class="accordion-body">
+                                                Clicca sull + in alto nella sezione blu.
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="accordion-item">
+                                        <h2 class="accordion-header" id="headingTwo">
+                                            <button class="accordion-button collapsed" type="button"
+                                                data-bs-toggle="collapse" data-bs-target="#collapseTwo"
+                                                aria-expanded="false" aria-controls="collapseTwo">
+                                                Come posso accedere alle informazioni del mio account?
+                                            </button>
+                                        </h2>
+                                        <div id="collapseTwo" class="accordion-collapse collapse"
+                                            aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                                            <div class="accordion-body">
+                                                Clicca sull'icona della campanella.
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="accordion-item">
+                                        <h2 class="accordion-header" id="headingThree">
+                                            <button class="accordion-button collapsed" type="button"
+                                                data-bs-toggle="collapse" data-bs-target="#collapseThree"
+                                                aria-expanded="false" aria-controls="collapseThree">
+                                                Posso usare questa dashboard da mobile?
+                                            </button>
+
+                                        </h2>
+                                        <div id="collapseThree" class="accordion-collapse collapse"
+                                            aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                                            <div class="accordion-body">
+                                                Si.
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- closed Faq -->
+
+                        </div>
+
+                        <!-- /column-left -->
+
+
+                        <!-- right side section -->
+
+                        <div class="col-12 col-lg-4">
+                            <div class="row">
+                                <div class="col-12">
+                                    <div class=" rounded">
+                                        <div class="border rounded-top">
+                                            <h3 class="ms-3">Todo</h3>
+                                        </div>
+                                        <div class="border rounded-bottom bg-white">
+                                            <div class="container rounded-bottom pt-3 pb-3">
+                                                <div class="border p-2 ps-3 rounded-top">
+                                                    <input class="form-check-input" type="checkbox" value=""
+                                                        id="flexCheckDefault">
+                                                    <label for="flexCheckDefault">Kickoff nuove classi</label>
+                                                </div>
+                                                <div class="border p-2 ps-3">
+                                                    <input class="form-check-input" type="checkbox" value=""
+                                                        id="flexCheckChecked" checked>
+                                                    <label for="flexCheckChecked">Nozioni su Boostrap</label>
+                                                </div>
+                                                <div class="border p-2 ps-3 rounded-bottom">
+                                                    <input class="form-check-input" type="checkbox" value=""
+                                                        id="flexCheckChecked" checked>
+                                                    <label for="flexCheckChecked">Controllare Username GitHub</label>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!-- img graphic -->
+                                <div class="col-12 pb-3 ">
+                                    <div class="pt-3 border rounded">
+                                        <div class="container pb-3">
+                                            <div class="card">
+                                                <img src="img/stats.jpeg" width="100%" class="card-img-top" alt="...">
+                                                <div class="card-body">
+                                                    <h5 class="card-title">Utenti attivi</h5>
+                                                    <p class="card-text">Lista degli utenti attivi in piattaforma
+                                                        nell'ultimo
+                                                        mese</p>
+                                                </div>
+                                                <ul class="list-group list-group-flush">
+                                                    <li class="list-group-item">Gennaio: 1200</li>
+                                                    <li class="list-group-item">Febbraio: 800</li>
+                                                    <li class="list-group-item">Marzo: 1500</li>
+                                                </ul>
+                                                <div class="card-body text-primary">
+                                                    <a href="#" class="card-link">Visualizza report approfondito</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
                         </div>
 
                     </div>
 
-                </div> 
+
+
+                </div>
+
 
 
             </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
