--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                                     +
                                 </a>
                                 <!-- OFFCANVAS -->
-                                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight"
+                                <div class="offcanvas offcanvas-end tabindex="-1" id="offcanvasRight"
                                     aria-labelledby="offcanvasRightLabel">
                                     <div class="offcanvas-header">
                                         <h5 class="offcanvas-title" id="offcanvasRightLabel">
@@ -889,7 +889,7 @@
                                     <div class="pt-3 border rounded">
                                         <div class="container pb-3">
                                             <div class="card">
-                                                <img src="img/stats.jpeg" width="100%" class="card-img-top" alt="...">
+                                                <img src="img/stats.jpeg" class="card-img-top" alt="...">
                                                 <div class="card-body">
                                                     <h5 class="card-title">Utenti attivi</h5>
                                                     <p class="card-text">Lista degli utenti attivi in piattaforma
@@ -914,37 +914,9 @@
 
                     </div>
 
-
-
                 </div>
 
-
-
             </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
         </main>
 
